Сделано псевдоэлемент на текущей ссылке, текст поверх изображений в "Чем мы занимаемся", сделано оверлей в портфолио

--- a/index.html
+++ b/index.html
@@ -106,12 +106,15 @@
                 <ul class="work-list list">
                     <li class="item">
                         <img src="./images/img1.jpg" alt="Монитор, планшет и клавиатура на столе" width="370" />
+                        <p>Десктопные приложения</p>
                     </li>
                     <li class="item">
                         <img src="./images/img2.jpg" alt="Ноутбук и смартфон" width="370" />
+                        <p>Мобильные приложения</p>
                     </li>
                     <li class="item">
                         <img src="./images/img3.jpg" alt="Выбор цвета на дисплее планшета" width="370" />
+                        <p>Дизайнерские решения</p>
                     </li>
                 </ul>
             </div>
