--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,11 @@
                 <ul class="example-list list">
                     <li class="example">
                         <a class="example-icon" href="#">
+                            <div class="overlay-example">
+                                <p>
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <img src="./images/imgposter1.jpg" alt="Ноутбук с изображением экрана" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Технокряк</h3>
@@ -83,6 +88,11 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
+                            <div class="overlay-example">
+                                <p>
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <img src="./images/imgposter2.jpg" alt="Два баскетболиста с мячем" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Постер New Orlean vs Golden Star</h3>
@@ -92,6 +102,11 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
+                            <div class="overlay-example">
+                                <p>
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <img src="./images/imgposter3.jpg" alt="Эмблема ресторана" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Ресторан Seafood</h3>
@@ -101,6 +116,11 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
+                            <div class="overlay-example">
+                                <p>
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <img src="./images/imgposter4.jpg" alt="Наушники" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Проект Prime</h3>
@@ -110,6 +130,11 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
+                            <div class="overlay-example">
+                                <p>
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <img src="./images/imgposter5.jpg" alt="Две коробки" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Проект Boxes</h3>
@@ -119,6 +144,11 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
+                            <div class="overlay-example">
+                                <p>
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <img src="./images/imgposter6.jpg" alt="Монитор компьютера" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Inspiration has no Borders</h3>
@@ -128,6 +158,11 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
+                            <div class="overlay-example">
+                                <p>
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <img src="./images/imgposter7.jpg" alt="Открытая книга" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Издание Limited Edition</h3>
@@ -137,6 +172,11 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
+                            <div class="overlay-example">
+                                <p>
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <img src="./images/imgposter8.jpg" alt="Этикетка на веревке" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Проект LAB</h3>
@@ -146,6 +186,11 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
+                            <div class="overlay-example">
+                                <p>
+                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                </p>
+                            </div>
                             <img src="./images/imgposter9.jpg" alt="Ноутбук на столе" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Growing Business</h3>
