--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="overlay">
                 <div class="container-hero">
                     <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
-                    <button class="hero-button" type="button">Заказать услугу</button>
+                    <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
                 </div>
             </div>
         </section>
@@ -368,5 +368,17 @@
             </div>
         </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="button-close" data-modal-close>
+                <svg class="icon-close" width="30" height="30">
+                    <use href="./images/symbol-defs.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    
+    <script src="./js/modal.js"></script>
 </body>
 </html>
