Исправил оверлей на карточках в Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,12 +74,15 @@
                 <ul class="example-list list">
                     <li class="example">
                         <a class="example-icon" href="#">
-                            <div class="overlay-example">
-                                <p>
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                                </p>
+                            <div class="overlay-hidden">
+                                <img src="./images/imgposter1.jpg" alt="Ноутбук с изображением экрана" width="370">
+                                <div class="overlay-example">
+                                    <p>
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
                             </div>
-                            <img src="./images/imgposter1.jpg" alt="Ноутбук с изображением экрана" width="370">
+                            
                             <div class="example-content">
                                 <h3 class="example-title">Технокряк</h3>
                                 <p class="example-text">Веб-сайт</p>
@@ -88,12 +91,14 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
-                            <div class="overlay-example">
-                                <p>
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                                </p>
+                            <div class="overlay-hidden">
+                                <img src="./images/imgposter2.jpg" alt="Два баскетболиста с мячем" width="370">
+                                <div class="overlay-example">
+                                    <p>
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
                             </div>
-                            <img src="./images/imgposter2.jpg" alt="Два баскетболиста с мячем" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Постер New Orlean vs Golden Star</h3>
                                 <p class="example-text">Дизайн</p>
@@ -102,12 +107,14 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
-                            <div class="overlay-example">
-                                <p>
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                                </p>
+                            <div class="overlay-hidden">
+                                <img src="./images/imgposter3.jpg" alt="Эмблема ресторана" width="370">
+                                <div class="overlay-example">
+                                    <p>
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
                             </div>
-                            <img src="./images/imgposter3.jpg" alt="Эмблема ресторана" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Ресторан Seafood</h3>
                                 <p class="example-text">Приложение</p>
@@ -116,12 +123,14 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
-                            <div class="overlay-example">
-                                <p>
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                                </p>
+                            <div class="overlay-hidden">
+                                <img src="./images/imgposter4.jpg" alt="Наушники" width="370">
+                                <div class="overlay-example">
+                                    <p>
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
                             </div>
-                            <img src="./images/imgposter4.jpg" alt="Наушники" width="370">
                             <div class="example-content">
                                 <h3 class="example-title">Проект Prime</h3>
                                 <p class="example-text">Маркетинг</p>
@@ -130,12 +139,14 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
-                            <div class="overlay-example">
-                                <p>
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                                </p>
-                            </div>
-                            <img src="./images/imgposter5.jpg" alt="Две коробки" width="370">
+                            <div class="overlay-hidden">
+                                <img src="./images/imgposter5.jpg" alt="Две коробки" width="370">
+                                <div class="overlay-example">
+                                    <p>
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>   
                             <div class="example-content">
                                 <h3 class="example-title">Проект Boxes</h3>
                                 <p class="example-text">Приложение</p>
@@ -144,12 +155,14 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
-                            <div class="overlay-example">
-                                <p>
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                                </p>
-                            </div>
-                            <img src="./images/imgposter6.jpg" alt="Монитор компьютера" width="370">
+                            <div class="overlay-hidden">
+                                <img src="./images/imgposter6.jpg" alt="Монитор компьютера" width="370">
+                                <div class="overlay-example">
+                                    <p>
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>   
                             <div class="example-content">
                                 <h3 class="example-title">Inspiration has no Borders</h3>
                                 <p class="example-text">Веб-сайт</p>
@@ -158,12 +171,14 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
-                            <div class="overlay-example">
-                                <p>
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                                </p>
-                            </div>
-                            <img src="./images/imgposter7.jpg" alt="Открытая книга" width="370">
+                            <div class="overlay-hidden">
+                                <img src="./images/imgposter7.jpg" alt="Открытая книга" width="370">
+                                <div class="overlay-example">
+                                    <p>
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>   
                             <div class="example-content">
                                 <h3 class="example-title">Издание Limited Edition</h3>
                                 <p class="example-text">Дизайн</p>
@@ -172,12 +187,14 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
-                            <div class="overlay-example">
-                                <p>
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                                </p>
-                            </div>
-                            <img src="./images/imgposter8.jpg" alt="Этикетка на веревке" width="370">
+                            <div class="overlay-hidden">
+                                <img src="./images/imgposter8.jpg" alt="Этикетка на веревке" width="370">
+                                <div class="overlay-example">
+                                    <p>
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>   
                             <div class="example-content">
                                 <h3 class="example-title">Проект LAB</h3>
                                 <p class="example-text">Маркетинг</p>
@@ -186,12 +203,14 @@
                     </li>
                     <li class="example">
                         <a class="example-icon" href="#">
-                            <div class="overlay-example">
-                                <p>
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
-                                </p>
-                            </div>
-                            <img src="./images/imgposter9.jpg" alt="Ноутбук на столе" width="370">
+                            <div class="overlay-hidden">
+                                <img src="./images/imgposter9.jpg" alt="Ноутбук на столе" width="370">
+                                <div class="overlay-example">
+                                    <p>
+                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>   
                             <div class="example-content">
                                 <h3 class="example-title">Growing Business</h3>
                                 <p class="example-text">Приложение</p>
